# ollygon

./: .gitignore  CMakeLists.txt  README.md  build debug.bat  build release.bat
src/: main.cpp
src/core/: camera.hpp  camera_controller.cpp  camera_controller.hpp  colour.hpp  constants.hpp  drag_spin_box.cpp  drag_spin_box.hpp  edit_mode.cpp  edit_mode.hpp  geometry.cpp  geometry.hpp  mat4.hpp  material.hpp  properties_panel.cpp  properties_panel.hpp  scene.hpp  scene_operations.cpp  scene_operations.hpp  selection_handler.cpp  selection_handler.hpp  selection_modes.hpp  selection_system.cpp  selection_system.hpp  serialisation.cpp  serialisation.hpp  sky.hpp  vec3.hpp  vec4.hpp
src/core/io/: import_mesh.cpp  import_mesh.hpp
src/editor/ui/: panel_raytracer.cpp  panel_raytracer.hpp  panel_scene_hierarchy.cpp  panel_scene_hierarchy.hpp  panel_scene_settings.cpp  panel_scene_settings.hpp  panel_viewport.cpp  panel_viewport.hpp  toolbar_edit_mode.cpp  toolbar_edit_mode.hpp  toolbar_selection_mode.cpp  toolbar_selection_mode.hpp  window_main.cpp  window_main.hpp
src/okaytracer/: optix_backend.cpp  optix_backend.hpp  optix_kernels.cu  optix_types.hpp  ray.hpp  raytracer.cpp  raytracer.hpp  render_scene.cpp  render_scene.hpp
